[workspace]
resolver = "2"
members = ["metro-scrape", "server", "foodlib", "cli-client", "api" , "status-api", "foodlib_new"]
default-members = ["server", "foodlib"]

[workspace.dependencies]
sqlx = { version = "0.8", features = [
	"postgres",
	"time",
	"macros",
	"migrate",
	"uuid",
	"runtime-tokio-rustls",
	"bigdecimal",
] }

axum = { version = "0.7", features = ["macros"] }
async-trait = "0.1"
num = "0.4"
bigdecimal = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
log = "0.4"
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "parsing", "local-offset"] }
regex = "1"
axum-login = "0.16"
