[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = ["macros"] }
dotenv = "0.15.0"
foodlib = { version = "0.1.0", path = "../foodlib", features = ["tokio"] }
http = "1.1.0"
num = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.8", features = [
    "postgres",
    "time",
    "macros",
    "migrate",
    "uuid",
    "runtime-tokio-rustls",
    "bigdecimal",
] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
