[package]
name = "cli-client"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.7", features = ["derive"]}
dotenv = "0.15.0"
foodlib = {path = "../foodlib"}
sqlx = { version = "0.6", features = ["postgres"] }
tokio = { version = "1.33.0", features = ["rt", "macros"] }
