[package]
name = "cli-client"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
dotenv = { workspace = true }
foodlib = { path = "../foodlib" }
sqlx = { workspace = true }
tokio = { workspace = true }
tabled = "0.14.0"
humantime = "2.1.0"
