[package]
name = "foodctl"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
dotenv = "0.15.0"
foodlib = { path = "../foodlib" }
time = { version = "0.3", features = ["serde", "parsing", "local-offset"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "time",
    "macros",
    "migrate",
    "uuid",
    "runtime-tokio-rustls",
    "bigdecimal",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tabled = "0.14.0"
humantime = "2.1.0"
chrono = "0.4"
dateparser = "0.2.1"
