[package]
name = "foodlib"
version = "0.1.0"
edition = "2021"

[features]
typst = ["comemo", "dep:typst", "typst-as-lib", "typst-pdf"]

[dependencies]
metro-scrape = { version = "0.1.0", path = "../metro-scrape" }


tokio = { workspace = true, optional = true }
axum-login.workspace = true
regex = { workspace = true }
log = { workspace = true }
num = { workspace = true }
eyre = { workspace = true }
bigdecimal = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
bcrypt = "0.15.0"
tabled = "0.14.0"
async-trait = "0.1.83"

#typst
comemo = { version = "0.4.0", optional = true }
typst-as-lib = { version = "0.11.1", optional = true }
typst-pdf = { version = "0.12.0", optional = true }
typst = { version = "0.12.0", optional = true }
