[package]
name = "foodlib"
version = "0.1.0"
edition = "2021"

[features]
typst = ["comemo", "dep:typst", "typst-as-lib", "typst-pdf"]
axum = ["dep:axum", "dep:maud"]

[dependencies]
metro-scrape = { version = "0.1.0", path = "../metro-scrape" }
foodlib_new = { path = "../foodlib_new" }


tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"], optional = true }
axum-login = "0.17"
regex = "1"
log = "0.4"
num = "0.4"
eyre = "0.6"
bigdecimal = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "parsing", "local-offset"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "postgres",
    "time",
    "macros",
    "migrate",
    "uuid",
    "runtime-tokio-rustls",
    "bigdecimal",
] }
bcrypt = "0.15.0"
tabled = "0.14.0"
async-trait = "0.1.83"
axum = { version = "0.8", features = ["macros"], optional = true }
maud = { version = "0.27", features = ["axum"], optional = true }

#typst
comemo = { version = "0.4.0", optional = true }
typst-as-lib = { version = "0.11.1", optional = true }
typst-pdf = { version = "0.12.0", optional = true }
typst = { version = "0.12.0", optional = true }
