[package]
name = "foodlib_new"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx.workspace = true
log.workspace = true
serde.workspace = true
bigdecimal.workspace = true
time.workspace = true
axum-login.workspace = true
async-trait.workspace = true
bcrypt = "0.16.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
