[package]
name = "foodlib_new"
version = "0.1.0"
edition = "2021"

[features]
axum = ["dep:axum", "dep:maud"]
typst = ["dep:comemo", "dep:typst", "dep:typst-as-lib", "dep:typst-pdf"]

[dependencies]
sqlx.workspace = true
log.workspace = true
serde.workspace = true
bigdecimal.workspace = true
time.workspace = true
axum-login.workspace = true
async-trait.workspace = true
bcrypt = "0.16.0"
axum = { workspace = true, optional = true }
maud = { workspace = true, optional = true }
eyre = { workspace = true }

comemo = { version = "0.4.0", optional = true }
typst-as-lib = { version = "0.11.1", optional = true }
typst-pdf = { version = "0.12.0", optional = true }
typst = { version = "0.12.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
