[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []
typst = ["foodlib/typst"]

[dependencies]
axum = { version = "0.7", features = ["macros"] }
foodlib = { path = "../foodlib" }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
mime_guess = "2"
rand = { version = "0.8", features = ["min_const_gen"] }
fern = { version = "0.6", features = ["colored"] }
maud = { version = "0.26", features = ["axum"] }
futures-util = "0.3"

axum-login = { workspace = true }
eyre = { workspace = true }
num = { workspace = true }
dotenv = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
bigdecimal = { workspace = true }
serde_json = "1.0.117"
tower-sessions = { version = "0.13.0", features = ["signed"] }
tokio-signal = "0.2.9"
tower-sessions-sqlx-store = { version = "0.14.2", features = ["postgres"] }
