[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []
typst = ["foodlib/typst"]

[dependencies]
axum.workspace = true
foodlib = { path = "../foodlib" }
foodlib_new = { path = "../foodlib_new" }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
mime_guess = "2"
rand = { version = "0.8", features = ["min_const_gen"] }
fern = { version = "0.6", features = ["colored"] }
maud = { version = "0.27", features = ["axum"] }
futures-util = "0.3"

axum-login = { workspace = true }
axum-extra = "*"
eyre = { workspace = true }
num = { workspace = true }
dotenv = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
bigdecimal = { workspace = true }
futures = { workspace = true }
serde_json = "1"
tower-sessions = { version = "0.14.0", features = ["signed"] }
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
hyper = "*"
