[package]
name = "status-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono.workspace = true
dotenv.workspace = true
foodlib = { version = "0.1.0", path = "../foodlib", features = ["tokio"] }
http = "1.1.0"
num = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.117"
sqlx.workspace = true
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
